# ExpenseTracker

./: db.sqlite3  pyproject.toml
ExpenseTracker/: settings.py  urls.py
exp_tracker/: urls.py  views.py
exp_tracker/migrations/: 0001_initial.py
exp_tracker/static/css/: expense_tracker.css  home.css  login_styles.css
exp_tracker/templates/expenses/: expense_list.html
exp_tracker/templates/home/: home.html
exp_tracker/templates/registration/: login.html  register.html
