[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Django Expense Tracker"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"       # Python 3.10 or higher (3.13 may cause issues)
django = "^4.2"        # Or your Django version
gunicorn = "^20.1.0"   # Required for Render.com
psycopg2-binary = "^2.9"  # For PostgreSQL (Render uses this)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"